[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=2]
[ext_resource path="res://scripts/dialogue.gd" type="Script" id=3]
[ext_resource path="res://sprites/button-press.png" type="Texture" id=4]
[ext_resource path="res://materials/ignore-modulate.tres" type="Material" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Default"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Center:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[node name="Dialogue" type="Node2D"]
position = Vector2( 0, -30 )
script = ExtResource( 3 )

[node name="Center" type="Node2D" parent="."]
position = Vector2( 0, 0.398655 )

[node name="TIE" type="ReferenceRect" parent="Center"]
material = ExtResource( 5 )
margin_left = -60.0
margin_top = -12.0
margin_right = 60.0
margin_bottom = 12.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
FONT = ExtResource( 1 )

[node name="ButtonIndicator" type="AnimatedSprite" parent="Center"]
material = ExtResource( 5 )
position = Vector2( 66, 6 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 4 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Default = SubResource( 5 )
[connection signal="buff_end" from="Center/TIE" to="." method="_on_TIE_buff_end"]
[connection signal="enter_break" from="Center/TIE" to="." method="_on_TIE_enter_break"]
[connection signal="resume_break" from="Center/TIE" to="." method="_on_TIE_resume_break"]
